beautify the ui

--- a/src/html/ChatPage.html
+++ b/src/html/ChatPage.html
@@ -6,9 +6,11 @@
   <link rel="stylesheet" type="text/css" href="../style/AboutMeStyle.css">
   <link rel="stylesheet" type="text/css" href="../style/ChatStyle.css">
 </head>
-<body>
+<body style="overflow-x: hidden;">
   <div class="chat-box">
-    <div class="message-list"></div>
+    <div class="message-list">
+      <div style="width: 100px;margin:0 auto;font-weight:800;border-bottom:#000 1px solid;text-align:center;line-height:30px">Chat Box</div>
+    </div>
     <div class="input-box">
       <input type="text" placeholder="Type your message...">
       <button type="submit" class="send-button">
