add customized username

--- a/src/html/ChatPage.html
+++ b/src/html/ChatPage.html
@@ -11,6 +11,23 @@
     <div class="message-list">
       <div style="width: 100px;margin:0 auto;font-weight:800;border-bottom:#000 1px solid;text-align:center;line-height:30px">Chat Box</div>
     </div>
+
+  <div class="wave-group">
+    <input required="" type="text" class="input" id="input_username">
+    <span class="bar"></span>
+    <label class="label">
+      <span class="label-char" style="--index: 0">Y</span>
+      <span class="label-char" style="--index: 1">o</span>
+      <span class="label-char" style="--index: 2">u</span>
+      <span class="label-char" style="--index: 3">r</span>
+      <span class="label-char" style="--index: 4;width:4px"></span>
+      <span class="label-char" style="--index: 5">N</span>
+      <span class="label-char" style="--index: 6">a</span>
+      <span class="label-char" style="--index: 7">m</span>
+      <span class="label-char" style="--index: 8">e</span>
+    </label>
+  </div>
+
     <div class="input-box">
       <input type="text" placeholder="Type your message...">
       <button type="submit" class="send-button">
@@ -58,7 +75,9 @@
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla dolore quam, quidem molestiae fugit reprehenderit expedita facilis, ipsum quibusdam rerum doloremque cupiditate, possimus temporibus sunt incidunt saepe autem ex veniam.
         </div>
     </div>
-      
+    
+
+
       <div class="quick-links">
           <div id="Home" class="quick-btn flex-center">
               <svg
