use json instead js variable

--- a/src/html/ChatPage.html
+++ b/src/html/ChatPage.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Chat App</title>
-  <link rel="stylesheet" href="../style/ChatStyle.css">
-  <link rel="stylesheet" href="../style/AboutMeStyle.css">
+  <link rel="stylesheet" href="style/ChatStyle.css">
+  <link rel="stylesheet" type="text/css" href="style/SideCard.css">
 </head>
 
 <body>
