--- a/src/html/DetailPage.html
+++ b/src/html/DetailPage.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Detail Page</title>
-    <link rel="stylesheet" type="text/css" href="/style/AboutMeStyle.css">
-    <link rel="stylesheet" type="text/css" href="/style/DetailStyle.css">
+    <link rel="stylesheet" type="text/css" href="style/SideCard.css">
+    <link rel="stylesheet" type="text/css" href="style/DetailStyle.css">
 </head>
 
 <body>
