--- a/src/html/RootPage.html
+++ b/src/html/RootPage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>WebApplication</title>
-    <link rel="stylesheet" type="text/css" href="/style/RootStyle.css">
+    <link rel="stylesheet" type="text/css" href="style/RootStyle.css">
 </head>
 
 <body style="margin: 0;">
@@ -22,12 +22,12 @@
     <div>
         <div class="title">
             <button id="jumpButton" class="root-button" style="vertical-align:middle"></button>
-            <span class="greating">Welcome</span>
+            <span class="greeting">Welcome</span>
         </div>
     </div>
 
 
-<script type="text/javascript" src="../javascript/RootScript.js"></script>
+<script type="text/javascript" src="javascript/RootScript.js"></script>
 
 </body>
 </html>
