--- a/src/html/AboutMe.html
+++ b/src/html/AboutMe.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AboutMe</title>
-    <link rel="stylesheet" type="text/css" href="/style/AboutMeStyle.css">
+    <link rel="stylesheet" type="text/css" href="style/AboutMeStyle.css">
+    <link rel="stylesheet" type="text/css" href="style/SideCard.css">
 </head>
 
 <body>
