--- a/src/html/DetailPage.html
+++ b/src/html/DetailPage.html
@@ -1,6 +1,6 @@
 <!-- contain more detailed information about you from the chosen point of view-->
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <title>Detail Page</title>
@@ -13,7 +13,7 @@
         <a href="http://jigsaw.w3.org/css-validator/check/referer">
             <img style="border:0;width:88px;height:31px"
                 src="http://jigsaw.w3.org/css-validator/images/vcss"
-                alt="Valid CSS!" />
+                alt="Valid CSS!">
         </a>
     </p>
 
@@ -38,7 +38,8 @@
             />
             </svg>
         </div>
-        <h1 id="title" class="head"></h1>
+        <h1 id="title" class="head">LOADING<span class="spinner"></span>
+        </h1>
         <hr>
         <div class="content-box">
             <p id="content" class="main_content"></p>
