--- a/src/html/RootPage.html
+++ b/src/html/RootPage.html
@@ -1,6 +1,6 @@
 <!-- the introduction page where you tell briefly who you are, what you study, etc. -->
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 <head>
     <meta charset="utf-8">
     <title>WebApplication</title>
@@ -12,7 +12,7 @@
         <a href="http://jigsaw.w3.org/css-validator/check/referer">
             <img style="border:0;width:88px;height:31px"
                 src="http://jigsaw.w3.org/css-validator/images/vcss"
-                alt="Valid CSS!" />
+                alt="Valid CSS!">
         </a>
     </p>
         
