--- a/src/html/AboutMe.html
+++ b/src/html/AboutMe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,8 +14,8 @@
     <p style="position: fixed;top:0;left:8px;z-index:10000;">
         <a href="http://jigsaw.w3.org/css-validator/check/referer">
             <img style="border:0;width:88px;height:31px"
-                src="http://jigsaw.w3.org/css-validator/images/vcss"
-                alt="Valid CSS!" />
+            src="http://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!">
         </a>
     </p>
 
