--- a/src/html/ChatPage.html
+++ b/src/html/ChatPage.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chat App</title>
   <link rel="stylesheet" href="style/ChatStyle.css">
   <link rel="stylesheet" type="text/css" href="style/SideCard.css">
@@ -11,7 +14,7 @@
     <a href="http://jigsaw.w3.org/css-validator/check/referer">
         <img style="border:0;width:88px;height:31px"
             src="http://jigsaw.w3.org/css-validator/images/vcss"
-            alt="Valid CSS!" />
+            alt="Valid CSS!">
     </a>
   </p>
 
@@ -46,16 +49,16 @@
 
     <div class="input-box">
           <form id="message-form">
-            <input type="text" id="message-input" autocomplete="off" />
+            <input type="text" id="message-input" autocomplete="off">
             <button type="submit" class="send-button">
-              <div class="svg-wrapper-1">
-                <div class="svg-wrapper">
+              <span class="svg-wrapper-1">
+                <span class="svg-wrapper">
                   <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path d="M0 0h24v24H0z" fill="none"></path>
                     <path d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z" fill="currentColor"></path>
                   </svg>
-                </div>
-              </div>
+                </span>
+              </span>
               <span>Send</span>
             </button>
           </form>
