--- a/src/html/DetailPage.html
+++ b/src/html/DetailPage.html
@@ -38,7 +38,7 @@
             />
             </svg>
         </div>
-        <h1 id="title" class="head">LOADING<span class="spinner"></span>
+        <h1 id="title" class="head">LOADING... <span class="loader"></span>
         </h1>
         <hr>
         <div class="content-box">
