--- a/src/html/DetailPage.html
+++ b/src/html/DetailPage.html
@@ -1,9 +1,12 @@
-<!-- contain more detailed information about you from the chosen point of view-->
+<!-- https://validator.w3.org/#validate_by_upload -->
+<!-- ALl HTML code pass the W3C HTML Validation -->
+
+<!-- contain more detailed information about me from the chosen point of view-->
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Detail Page</title>
+    <title>About Page</title>
     <link rel="stylesheet" type="text/css" href="style/SideCard.css">
     <link rel="stylesheet" type="text/css" href="style/DetailStyle.css">
 </head>
