--- a/src/html/RootPage.html
+++ b/src/html/RootPage.html
@@ -1,9 +1,12 @@
-<!-- the introduction page where you tell briefly who you are, what you study, etc. -->
+<!-- https://validator.w3.org/#validate_by_upload -->
+<!-- ALl HTML code pass the W3C HTML Validation -->
+
+
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>WebApplication</title>
+    <title>Home Page</title>
     <link rel="stylesheet" type="text/css" href="style/RootStyle.css">
 </head>
 
@@ -27,7 +30,7 @@
     </div>
 
 
-<script type="text/javascript" src="javascript/RootScript.js"></script>
+<script src="javascript/RootScript.js"></script>
 
 </body>
 </html>
