--- a/src/html/ChatPage.html
+++ b/src/html/ChatPage.html
@@ -1,10 +1,13 @@
+<!-- https://validator.w3.org/#validate_by_upload -->
+<!-- ALl HTML code pass the W3C HTML Validation -->
+
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chat App</title>
+  <title>Chat Application Page</title>
   <link rel="stylesheet" href="style/ChatStyle.css">
   <link rel="stylesheet" type="text/css" href="style/SideCard.css">
 </head>
