--- a/src/html/AboutMe.html
+++ b/src/html/AboutMe.html
@@ -22,11 +22,12 @@
         </a>
     </p>
 
-    
+    <!-- A cards container that wait for the cards to be added by javascript -->
     <div>
        <div id="cards-container"></div>
     </div>
 
+    <!-- A navigation sidebar that wait for the SideCard.html to be added by javascript -->
     <div id="side-card-box"></div>
 
     <script src="/javascript/SideCard.js"></script>
