--- a/src/html/RootPage.html
+++ b/src/html/RootPage.html
@@ -1,7 +1,6 @@
 <!-- https://validator.w3.org/#validate_by_upload -->
 <!-- ALl HTML code pass the W3C HTML Validation -->
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,6 +10,7 @@
 </head>
 
 <body style="margin: 0;">
+    <!-- This is an icon that indicate the code have passed the w3c CSS validation -->
     <p style="position: fixed;top:0;left:8px;z-index:10000;">
         <a href="http://jigsaw.w3.org/css-validator/check/referer">
             <img style="border:0;width:88px;height:31px"
@@ -18,10 +18,12 @@
                 alt="Valid CSS!">
         </a>
     </p>
-        
+    <!-- a background frame for CSS animation -->
     <div class="background_frame">
         <div class="background"></div>
     </div>
+
+    <!-- the greeting button -->
     <div>
         <div class="title">
             <button id="jumpButton" class="root-button" style="vertical-align:middle"></button>
