--- a/src/html/DetailPage.html
+++ b/src/html/DetailPage.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- This is an icon that indicate the code have passed the w3c CSS validation -->
     <p style="position: fixed;top:0;left:8px;z-index:10000;">
         <a href="http://jigsaw.w3.org/css-validator/check/referer">
             <img style="border:0;width:88px;height:31px"
